# VAPT_Scanner

./: .gitignore  CONFIGURATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FINAL_STATUS.md  FIX_SUMMARY.md  GIT_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JIRA_INTEGRATION_GUIDE.md  KALI_SETUP_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  README.md  README_GITHUB.md  SCANNER_ARCHITECTURE.md  START_GUIDE.md  SYSTEM_UPDATE_SUMMARY.md  create_user_commands.md  fix.py  fix_templates.py  manage.py  output.xml  pyproject.toml  requirements.txt  run.bat  run.sh  setup_kali.sh
authentication/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
common/: admin.py  apps.py  functions.py  models.py  serializers.py  tests.py  urls.py  views.py
dashboard/: apps.py  models.py  tests.py  urls.py  views.py
jiraticketing/: admin.py  apps.py  models.py  urls.py  views.py
networkscanners/: admin.py  apps.py  models.py  resources.py  scanner_consolidated.py  serializers.py  tests.py  urls.py  views.py
pentest/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
report_upload/: tests.py  urls.py  views.py
reports/: urls.py  views.py
scanners/: vuln_checker.py
staticscanners/: admin.py  apps.py  models.py  resources.py  scanner_consolidated.py  serializers.py  tests.py  urls.py  views.py
tools/: admin.py  apps.py  models.py  scanner_consolidated.py  urls.py  views.py
user_management/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+123 files in other folders)
