[tool.poetry]
name = "vapt-scanner"
version = "1.0.0"
description = "VAPT Security Scanning Platform"
authors = ["VAPT Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "4.2.9"
djangorestframework = ">=3.13.1"
django-stronghold = ">=0.4.0"
gunicorn = ">=20.1.0"
zaproxy = ">=0.0.18"
defusedxml = ">=0.7.1"
lxml = ">=4.9.1"
psycopg2-binary = ">=2.9.3"
requests = ">=2.28.1"
urllib3 = ">=1.26"
chardet = ">=5.0.0"
charset-normalizer = ">=2.1.1"
python-nmap = ">=0.6.4"
jira = ">=3.4.0"
djangorestframework-simplejwt = ">=5.2.0"
django-notifications-hq = ">=1.7.0"
django-import-export = ">=2.8.0"
django-cors-headers = ">=4.3.1"
django-cryptography = ">=1.1"
django-model-utils = ">=4.2.0"
django-background-tasks = ">=1.2.5"
Pillow = ">=9.2.0"
reportlab = ">=3.6.11"
xhtml2pdf = ">=0.2.8"
svglib = ">=1.4.1"
beautifulsoup4 = ">=4.11.1"
python-magic = ">=0.4.27"
PyYAML = ">=6.0"
cryptography = ">=37.0.4"
PyJWT = ">=2.4.0"
whitenoise = ">=6.2.0"
django-settings-export = ">=1.2.1"
tablib = ">=3.2.1"
xlrd = ">=2.0.1"
openpyxl = ">=3.0.10"
jsonfield = ">=3.1.0"
six = ">=1.16.0"
python-dateutil = ">=2.8.2"
pytz = ">=2022.2.1"
django-easy-pdf = ">=0.1.1"
arabic-reshaper = ">=2.1.3"
python-bidi = ">=0.4.2"
diff-match-patch = ">=20200713"

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"
